--- a/gb/24/6/13/n14269700.md
+++ b/gb/24/6/13/n14269700.md
@@ -21,37 +21,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/19/n14162035.md#1">消防局庆祝消防节  县长表扬绩优消防人员及义消</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/31/n14170164.md#1">消防安检好用心 新年采买好安心</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260827.md#1">消防员殉职  台内政部设事件调查会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269637.md#1">饭店业是结构性缺工 业者盼开放移工纾解</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269535.md#1">减少机车族行人曝晒 台北夏季缩短红灯秒数</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269091.md#1">新兴毒品入侵校园 立委忧黑数多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269077.md#1">台安居缉毒专案 彩虹烟、大麻列重点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269010.md#1">台南铁路地下化预定2026年底完工 李孟谚：加速办理永康延伸案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269007.md#1">台去年违规贩售药品逾千件 民众网售药品最常见</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309764.md#1">调查局发动金融扫黑专案 查获不法金额逾30亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309717.md#1">闯红灯、超速 邮务车违规增3成</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309696.md#1">食药妆违规广告“LABELLE拉蓓”罚最多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309680.md#1">外包工人频传伤亡 监察院请台电检讨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308302.md#1">加味烟拟禁27项添加物 民团：难杜绝特定口味</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308250.md#1">阳明货柜轮“动明轮”在宁波码头爆炸 阳明：正在厘清事故经过</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/2/n10272258.md#1" target="_blank">杨宁：庆祝毛死去的年轻人被判死缓后</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268667.md#1">【新闻看点】吉林凶嫌伤美国教师案 诸多疑点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269080.md#1">【时事金扫描】乌首攻俄本土 击毁俄超级战机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268550.md#1">【秦鹏观察】中共鼓动“义和团” 砸了自己脚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14267991.md#1">四川成都凌晨发生巨响 民众被惊醒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267898.md#1">四美国教师在吉林公园遇刺 国会议员关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268570.md#1">美籍讲师讲述吉林公园遇刺事件经过</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267839.md#1">曾遭中共打压 台湾佳丽高曼容摘世界选美后冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269230.md#1">大陆端午档电影10年最差 刘德华新片或巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268574.md#1">胡歌睽违6年低调访台 活动资讯曝光引瞩目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268629.md#1">《九龙城寨》香港票房破亿 有望打破影史纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267926.md#1">汤唯自曝最常用韩语 放闪导演丈夫一脸害羞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266367.md#1">南瓜遇见地瓜 创意素食甜点汤品太好吃了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268931.md#1">如何让蔬果存放久一点？ 专家教你几招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268268.md#1">这个工作习惯会让你看似“无能” 赶快改正</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251692.md#1">爸妈别乱发脾气 珍贵的亲子关系重在“信任”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304257.md#1">【时事金扫描】瓦格纳现委国 马杜罗约架马斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303886.md#1">【新闻欣视角】中共两战区司令突换人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304239.md#1">昆凌分享7岁儿一句话 曝周杰伦在家中地位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302515.md#1">有多少食品添加剂不列在成分标签中？</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/13/n14269700.htm">政院通过消防法修正草案、核定260亿预算 强化消防职安</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269700.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
